--- a/src/templates/strategic-prompt.hbs
+++ b/src/templates/strategic-prompt.hbs
@@ -26,13 +26,13 @@ CONFLICT ANALYSIS:
 
 **PACKAGES SATISFIED BY CURRENT VERSION OF "{{analysis.conflictingPackage}}":**
 {{#each analysis.satisfyingPackages}}
-- {{packageName}}@{{packageVersion}} (rank {{rank}}) requires {{requiredVersionRange}}
+- {{packageName}}@{{packageVersion}} (rank {{rank}}) requires {{{ requiredVersionRange }}}
   Available versions for {{packageName}}: {{#each availableVersions}}{{this}}{{#unless @last}}, {{/unless}}{{/each}}
 {{/each}}
 
 **PACKAGES NOT SATISFIED:**
 {{#each analysis.notSatisfying}}
-- {{packageName}}@{{packageVersion}} (rank {{rank}}) requires {{requiredVersionRange}}
+- {{packageName}}@{{packageVersion}} (rank {{rank}}) requires {{{ requiredVersionRange }}}
   Available versions for {{packageName}}: {{#each availableVersions}}{{this}}{{#unless @last}}, {{/unless}}{{/each}}
 {{/each}}
 {{else}}
